--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ms-bookings",
+  "name": "ms-orders",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -29,13 +29,10 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
     "pg": "^8.11.0",
     "postgres": "^3.3.5",
     "reflect-metadata": "^0.1.13",
